[gd_scene load_steps=5 format=3 uid="uid://bb7byx5jamexe"]

[ext_resource type="Script" path="res://Components/Plataforma (PL)/Scripts/PL_Enemy_Frog.gd" id="1_3223c"]
[ext_resource type="SpriteFrames" uid="uid://bwsbepg5wsd2k" path="res://Resources/PL_Frog_Animation.tres" id="2_cm34a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_78anm"]
radius = 8.75506

[sub_resource type="CircleShape2D" id="CircleShape2D_fydfg"]
radius = 6.07045

[node name="Enemy_Frog" type="CharacterBody2D"]
position = Vector2(129, 194)
collision_layer = 4
script = ExtResource("1_3223c")
metadata/_edit_group_ = true

[node name="Animated_Sprite_Enemy_Frog" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = ExtResource("2_cm34a")
animation = &"idle"

[node name="Collision_Enemy_Frog" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_78anm")

[node name="Hit_Box" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="Collision_Hit_Box" type="CollisionShape2D" parent="Hit_Box"]
shape = SubResource("CircleShape2D_fydfg")
debug_color = Color(0.902276, 0.000154788, 0.75682, 0.42)

[connection signal="body_entered" from="Hit_Box" to="." method="_on_hit_box_body_entered"]
